...
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/planthuntWaitButton"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/planthuntLightGreen"
            android:fontFamily="@font/alata"
            android:text="Ready"
...
